# agentic_custom_lib

./: README.md  pyproject.toml  requirements.txt
agentic_custom/: __init__.py  agent.py  config.py  prompt_factory.py  run_tracker.py  run_visualize.py
agentic_custom/agent/: __init__.py  round_promise.py
agentic_custom/agent/tooling/: __init__.py  tools_context.py
agentic_custom/agent/tooling/base_tools/: __init__.py  grounding.py  think.py  user_input.py
agentic_custom/agent/tooling/base_tools/skills/: __init__.py  skills_tools.py
agentic_custom/context/: __init__.py
agentic_custom/cost/: __init__.py  prices.py
agentic_custom/llms/: __init__.py  anthropic_llm.py  azure_llm.py  ollama_llm.py  openai_llm.py
agentic_custom/tooling/: __init__.py  grounding.py  tools_context.py
agentic_custom/tooling/base_tools/: __init__.py  user_input.py
playgrouds/: prompt_factories.ipynb
